Prefer StandardCharsets.UTF_8 to Charset.forName("UTF-8")